--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ robotframework==2.9.2
 scapy==2.3.1
 scp==0.10.2
 six==1.12.0  # for python-dateutil
+PTable==0.9.2
 
 # The following is only there for PLRsearch.
 dill==0.2.8.2
