--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -376,6 +376,8 @@
         - 46  # NDRPDR full
         - 48  # NDRPDR full
         - 49  # NDRPDR full
+        - 50  # NDRPDR full
+        - 51  # NDRPDR full
 
     vpp-perf-results-3n-skx:
       csit-vpp-perf-verify-1904-3n-skx:
@@ -1418,6 +1420,8 @@
       - 46  # NDRPDR full
       - 48  # NDRPDR full
       - 49  # NDRPDR full
+      - 50  # NDRPDR full
+      - 51  # NDRPDR full
       - 11  # NDRPDR sel
       - 12  # NDRPDR sel
       - 20  # NDRPDR sel
