CSIT-1488: Add data to the Report 1904
Change-Id: I54b2f02745497ea4cd90d485834b1aa42389f57d
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -378,6 +378,7 @@
         - 49  # NDRPDR full
         - 50  # NDRPDR full
         - 51  # NDRPDR full
+        - 52  # NDRPDR full
 
     vpp-perf-results-3n-skx:
       csit-vpp-perf-verify-1904-3n-skx:
@@ -1422,6 +1423,7 @@
       - 49  # NDRPDR full
       - 50  # NDRPDR full
       - 51  # NDRPDR full
+      - 52  # NDRPDR full
       - 11  # NDRPDR sel
       - 12  # NDRPDR sel
       - 20  # NDRPDR sel
