CSIT-1488: Add data to the Report 1904
Change-Id: Ia75675d6e89902c3370feaa2e8eb468cdd0fdba1
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -379,6 +379,8 @@
         - 50  # NDRPDR full
         - 51  # NDRPDR full
         - 52  # NDRPDR full
+        - 53  # NDRPDR full
+        - 54  # NDRPDR full
 
     vpp-perf-results-3n-skx:
       csit-vpp-perf-verify-1904-3n-skx:
@@ -1424,6 +1426,8 @@
       - 50  # NDRPDR full
       - 51  # NDRPDR full
       - 52  # NDRPDR full
+      - 53  # NDRPDR full
+      - 54  # NDRPDR full
       - 11  # NDRPDR sel
       - 12  # NDRPDR sel
       - 20  # NDRPDR sel
