CSIT-1488: Add data to the Report 1904
Change-Id: If0e75e4bb4623eea913d433affa42a6bb03454b8
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -381,6 +381,7 @@
         - 52  # NDRPDR full
         - 53  # NDRPDR full
         - 54  # NDRPDR full
+        - 56  # NDRPDR full
 
     vpp-perf-results-3n-skx:
       csit-vpp-perf-verify-1904-3n-skx:
@@ -1428,6 +1429,7 @@
       - 52  # NDRPDR full
       - 53  # NDRPDR full
       - 54  # NDRPDR full
+      - 56  # NDRPDR full
       - 11  # NDRPDR sel
       - 12  # NDRPDR sel
       - 20  # NDRPDR sel
