--- a/topologies/available/lf_3n_hsw_testbed1.yaml
+++ b/topologies/available/lf_3n_hsw_testbed1.yaml
@@ -132,6 +132,7 @@ nodes:
         mac_address: "90:e2:ba:b5:0a:18"
         pci_address: "0000:0a:00.0"
         ip4_address: "172.17.21.1"
+        driver: ixgbe
         link: link21
         model: Intel-X520-DA2
       port2:
@@ -139,6 +140,7 @@ nodes:
         mac_address: "90:e2:ba:b5:0a:19"
         pci_address: "0000:0a:00.1"
         ip4_address: "172.16.30.1"
+        driver: ixgbe
         link: link3
         model: Intel-X520-DA2
       port3:
@@ -146,6 +148,7 @@ nodes:
         mac_address: "04:62:73:8c:c3:0f"
         pci_address: "0000:13:00.0"
         ip4_address: "172.17.22.1"
+        driver: enic
         link: link22
         model: Cisco-VIC-1385
       port4:
@@ -153,6 +156,7 @@ nodes:
         mac_address: "04:62:73:8c:c3:10"
         pci_address: "0000:14:00.0"
         ip4_address: "172.16.10.1"
+        driver: enic
         link: link1
         model: Cisco-VIC-1385
       port5:
@@ -160,6 +164,7 @@ nodes:
         mac_address: "68:05:ca:37:20:48"
         pci_address: "0000:88:00.0"
         ip4_address: "172.17.23.1"
+        driver: i40e
         link: link23
         model: Intel-XL710
       port6:
@@ -167,6 +172,7 @@ nodes:
         mac_address: "68:05:ca:37:20:49"
         pci_address: "0000:88:00.1"
         ip4_address: "172.16.70.1"
+        driver: i40e
         link: link7
         model: Intel-XL710
       port7:
@@ -174,6 +180,7 @@ nodes:
         mac_address: "3c:fd:fe:9c:ee:c4"
         pci_address: "0000:8a:00.0"
         ip4_address: "172.17.24.1"
+        driver: i40e
         link: link24
         model: Intel-X710
       port8:
@@ -181,6 +188,7 @@ nodes:
         mac_address: "3c:fd:fe:9c:ee:c5"
         pci_address: "0000:8a:00.1"
         ip4_address: "172.16.90.1"
+        driver: i40e
         link: link9
         model: Intel-X710
       port9:
@@ -188,6 +196,7 @@ nodes:
         mac_address: "00:fe:c8:e4:d0:1b"
         pci_address: "0000:06:00.0"
         ip4_address: "172.17.25.1"
+        driver: enic
         link: link25
         model: Cisco-VIC-1227
       port10:
@@ -195,6 +204,7 @@ nodes:
         mac_address: "00:fe:c8:e4:d0:1c"
         pci_address: "0000:07:00.0"
         ip4_address: "172.16.50.1"
+        driver: enic
         link: link5
         model: Cisco-VIC-1227
   DUT2:
@@ -217,6 +227,7 @@ nodes:
         mac_address: "90:e2:ba:b5:05:e4"
         pci_address: "0000:0a:00.0"
         ip4_address: "172.16.40.1"
+        driver: ixgbe
         link: link4
         model: Intel-X520-DA2
       port2:
@@ -224,6 +235,7 @@ nodes:
         mac_address: "90:e2:ba:b5:05:e5"
         pci_address: "0000:0a:00.1"
         ip4_address: "172.17.21.2"
+        driver: ixgbe
         link: link21
         model: Intel-X520-DA2
       port3:
@@ -231,6 +243,7 @@ nodes:
         mac_address: "d8:b1:90:19:41:69"
         pci_address: "0000:13:00.0"
         ip4_address: "172.16.20.1"
+        driver: enic
         link: link2
         model: Cisco-VIC-1385
       port4:
@@ -238,6 +251,7 @@ nodes:
         mac_address: "d8:b1:90:19:41:6a"
         pci_address: "0000:15:00.0"
         ip4_address: "172.17.22.2"
+        driver: enic
         link: link22
         model: Cisco-VIC-1385
       port5:
@@ -245,6 +259,7 @@ nodes:
         mac_address: "68:05:ca:35:78:e8"
         pci_address: "0000:88:00.0"
         ip4_address: "172.16.80.1"
+        driver: i40e
         link: link8
         model: Intel-XL710
       port6:
@@ -252,6 +267,7 @@ nodes:
         mac_address: "68:05:ca:35:78:e9"
         pci_address: "0000:88:00.1"
         ip4_address: "172.17.23.2"
+        driver: i40e
         link: link23
         model: Intel-XL710
       port7:
@@ -259,6 +275,7 @@ nodes:
         mac_address: "3c:fd:fe:9c:ef:94"
         pci_address: "0000:8a:00.0"
         ip4_address: "172.16.100.1"
+        driver: i40e
         link: link10
         model: Intel-X710
       port8:
@@ -266,6 +283,7 @@ nodes:
         mac_address: "3c:fd:fe:9c:ef:95"
         pci_address: "0000:8a:00.1"
         ip4_address: "172.17.24.2"
+        driver: i40e
         link: link24
         model: Intel-X710
       port9:
@@ -273,6 +291,7 @@ nodes:
         mac_address: "00:fe:c8:e5:44:4c"
         pci_address: "0000:06:00.0"
         ip4_address: "172.16.60.1"
+        driver: enic
         link: link6
         model: Cisco-VIC-1227
       port10:
@@ -280,6 +299,6 @@ nodes:
         mac_address: "00:fe:c8:e5:44:4d"
         pci_address: "0000:07:00.0"
         ip4_address: "172.17.25.2"
+        driver: enic
         link: link25
         model: Cisco-VIC-1227
-
