PAL: Process local xml file
Change-Id: I2d60b2c6616de6d6b2e1d742407ac392471883aa
Signed-off-by: Tibor Frank <tifrank@cisco.com>

--- a/resources/tools/presentation/specification_CPTA.yaml
+++ b/resources/tools/presentation/specification_CPTA.yaml
@@ -667,7 +667,7 @@
 -
   type: "output"
   output:
-    "CPTA"  # Continuous Performance Trending and Analysis
+    "trending"
   format:
     html:
     - full
