--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -441,6 +441,7 @@
         - 10  # NDRPDR sel
         - 12  # NDRPDR sel
         - 13  # NDRPDR sel
+        - 14  # NDRPDR sel
 
     plot-vpp-hdrh-lat-3n-tsh:
       csit-vpp-perf-verify-2001-3n-tsh:
@@ -583,6 +584,8 @@
         - 70  # NDRPDR full
         - 72  # NDRPDR full
         - 73  # NDRPDR full
+        - 77  # NDRPDR full
+        - 78  # NDRPDR full
 
     vpp-perf-results-3n-skx:
       # TODO: Replace
@@ -908,6 +911,7 @@
         - 10  # NDRPDR sel
         - 12  # NDRPDR sel
         - 13  # NDRPDR sel
+        - 14  # NDRPDR sel
     vpp-performance-changes-3n-tsh:
       - "vpp-performance-changes-3n-tsh-ref"
       - "vpp-performance-changes-3n-tsh-cmp"
@@ -2065,6 +2069,8 @@
       - 70  # NDRPDR full
       - 72  # NDRPDR full
       - 73  # NDRPDR full
+      - 77  # NDRPDR full
+      - 78  # NDRPDR full
 
 #    csit-vpp-perf-verify-1904-3n-skx:
 #      - 7   # MRR sel
@@ -2197,6 +2203,7 @@
       - 10  # NDRPDR sel
       - 12  # NDRPDR sel
       - 13  # NDRPDR sel
+      - 14  # NDRPDR sel
       - 9   # MRR sel
 
     csit-vpp-perf-verify-1908-3n-dnv:
@@ -2456,8 +2463,8 @@
   format:
     html:
     - full
-#    pdf:
-#    - minimal
+    pdf:
+    - minimal
 
 ################################################################################
 ###                               T A B L E S                                ###
