--- a/resources/api/vpp/supported_crcs.yaml
+++ b/resources/api/vpp/supported_crcs.yaml
@@ -27,9 +27,7 @@
 
 # Trailing comments are optional, for tracking how to test the message.
 
-# https://logs.fd.io/production/vex-yul-rot-jenkins-1/
-# vpp-beta-merge-master-ubuntu1804/3370/archives/build-root/
-19.08-rc0~806-g4f9446444~b3370:
+19.08.1-release:
     acl_add_replace: '0x13bc8539'  # perf
     acl_add_replace_reply: '0xac407b0c'  # perf
     acl_dump: '0xef34fea4'  # perf teardown
@@ -51,8 +49,8 @@
     classify_add_del_session_reply: '0xe8d4e804'  # dev
     classify_add_del_table: '0x9bd794ae'  # dev
     classify_add_del_table_reply: '0x05486349'  # dev
-    cli_inband: '0xb1ad59b3'  # dev setup
-    cli_inband_reply: '0x6d3c80a4'  # dev setup
+    cli_inband: '0xf8377302'  # dev setup
+    cli_inband_reply: '0x05879051'  # dev setup
     cop_interface_enable_disable: '0x69d24598'  # dev
     cop_interface_enable_disable_reply: '0xe8d4e804'  # dev
     cop_whitelist_enable_disable: '0x8bb8f6dc'  # dev
@@ -67,32 +65,32 @@
     create_vlan_subif_reply: '0xfda5941f'  # virl
     gbp_bridge_domain_add: '0x70f1069c' # perf
     gbp_bridge_domain_add_reply: '0xe8d4e804' # perf
-    gbp_route_domain_add: '0x355b67c0' # perf
+    gbp_route_domain_add: '0x1560adc7' # perf
     gbp_route_domain_add_reply: '0xe8d4e804' # perf
-    gbp_endpoint_add: '0x6003c704' # perf
+    gbp_endpoint_add: '0xf0efa120' # perf
     gbp_endpoint_add_reply: '0x1dd3ff3e' # perf
     gbp_endpoint_group_add: '0x1031b376' # perf
     gbp_endpoint_group_add_reply: '0xe8d4e804' # perf
-    gbp_subnet_add_del: '0x4be859ed' # perf
+    gbp_subnet_add_del: '0xf42b9430' # perf
     gbp_subnet_add_del_reply: '0xe8d4e804' # perf
-    gbp_contract_add_del: '0xc64310d2' # perf
+    gbp_contract_add_del: '0x5b63d90a' # perf
     gbp_contract_add_del_reply: '0x1992deab' # perf
     gbp_ext_itf_add_del: '0x6995e85f' # perf
     gbp_ext_itf_add_del_reply: '0xe8d4e804' # perf
-    gre_tunnel_add_del: '0x04199f47'  # virl
-    gre_tunnel_add_del_reply: '0x903324db'  # virl
+    gre_tunnel_add_del: '0x4bf7bdec'  # virl
+    gre_tunnel_add_del_reply: '0x5383d31f'  # virl
     gpe_enable_disable: '0xeb0e943b'  # virl
     gpe_enable_disable_reply: '0xe8d4e804'  # virl
     hw_interface_set_mtu: '0x132da1e7'  # dev
     hw_interface_set_mtu_reply: '0xe8d4e804'  # dev
     input_acl_set_interface: '0xe09537b0'  # dev
     input_acl_set_interface_reply: '0xe8d4e804'  # dev
-    ip_address_details: '0x2f1dbc7d'  # dev
+    ip_address_details: '0x7002eee7'  # dev
     ip_address_dump: '0x6b7bcd0a'  # dev
-    ip_neighbor_add_del: '0x7a68a3c4'  # dev
+    ip_neighbor_add_del: '0x029dad44'  # dev
     ip_neighbor_add_del_reply: '0x1992deab'  # dev
-    ip_probe_neighbor: '0x2736142d'  # virl
-    ip_route_add_del: '0x83e086ce'  # dev
+    ip_probe_neighbor: '0x37bc128d'  # virl
+    ip_route_add_del: '0x5ceee41c'  # dev
     ip_route_add_del_reply: '0x1992deab'  # dev
     ip_source_check_interface_add_del: '0x0a60152a'  # virl
     ip_source_check_interface_add_del_reply: '0xe8d4e804'  # virl
@@ -104,7 +102,7 @@
     ipsec_sad_entry_add_del_reply: '0x9ffac24b'  # dev
     ipsec_spd_add_del: '0x9ffdf5da'  # dev
     ipsec_spd_add_del_reply: '0xe8d4e804'  # dev
-    ipsec_spd_entry_add_del: '0x6bc6a3b5'  # dev
+    ipsec_spd_entry_add_del: '0xdb217840'  # dev
     ipsec_spd_entry_add_del_reply: '0x9ffac24b'  # dev
     l2_interface_vlan_tag_rewrite: '0xb90be6b4'  # virl
     l2_interface_vlan_tag_rewrite_reply: '0xe8d4e804'  # virl
@@ -136,9 +134,9 @@
     memif_dump: '0x51077d14'  # dev
     memif_socket_filename_add_del: '0x30e3929d'  # dev
     memif_socket_filename_add_del_reply: '0xe8d4e804'  # dev
-    nat_det_add_del_map: '0x04b76549'  # perf
+    nat_det_add_del_map: '0x112fde05'  # perf
     nat_det_add_del_map_reply: '0xe8d4e804'  # perf
-    nat44_interface_add_del_feature: '0xef3edad1'  # perf
+    nat44_interface_add_del_feature: '0xf3699b83'  # perf
     nat44_interface_add_del_feature_reply: '0xe8d4e804'  # perf
     # ^^^^ tc01-64B-1c-ethip4udp-ip4base-nat44-mrr
     # ^ nat44NOTscaleNOTsrc_user_1
@@ -149,11 +147,11 @@
     show_threads: '0x51077d14'  # dev
     show_threads_reply: '0xf5e0b66f'  # dev
     show_version: '0x51077d14'  # dev setup
-    show_version_reply: '0xb9bcf6df'  # dev setup
+    show_version_reply: '0xc919bde1'  # dev setup
     sw_interface_add_del_address: '0x7b583179'  # dev
     sw_interface_add_del_address_reply: '0xe8d4e804'  # dev
-    sw_interface_details: '0xe4ee7eb6'  # dev setup
-    sw_interface_dump: '0x052753c5'  # dev setup
+    sw_interface_details: '0x52a9262e'  # dev setup
+    sw_interface_dump: '0xaa610c27'  # dev setup
     sw_interface_ip6nd_ra_config: '0xc3f02daa'  # dev
     sw_interface_ip6nd_ra_config_reply: '0xe8d4e804'  # dev
     sw_interface_rx_placement_details: '0x0e9e33f4'  # perf
