Report: Do not show failed tests in "Detailed Test Results"
Change-Id: I6019af7f0b2af29c876a39a3243fe29843e3b1da
Signed-off-by: Tibor Frank <tifrank@cisco.com>
(cherry picked from commit d10c83488ecc30f5b870e36c2b7c9a9449eac6aa)

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -589,6 +589,7 @@
         - 77  # NDRPDR full
         - 78  # NDRPDR full
         - 79  # NDRPDR full
+        - 82  # NDRPDR full
 
     vpp-perf-results-3n-skx:
       # TODO: Replace
@@ -2112,6 +2113,7 @@
       - 77  # NDRPDR full
       - 78  # NDRPDR full
       - 79  # NDRPDR full
+      - 82  # NDRPDR full
 
 #    csit-vpp-perf-verify-1904-3n-skx:
 #      - 7   # MRR sel
@@ -2506,8 +2508,8 @@
   format:
     html:
     - full
-    pdf:
-    - minimal
+#    pdf:
+#    - minimal
 
 ################################################################################
 ###                               T A B L E S                                ###
